--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
         <h3>my first website</h3>
         <p> sjfhsjff  sufgaff  ajfgfofao   ajfgfhasfihf asjfasufhu  </p>
     </div>
+    <div>
+        <h3>my second website</h3>
+        <p> sjfhsjff  sufgaff  ajfgfofao   ajfgfhasfihf asjfasufhu  </p>
+    </div>
+
+    <div>
+        <h3>my third website</h3>
+        <p> sjfhsjff  sufgaff  ajfgfofao   ajfgfhasfihf asjfasufhu  </p>
+    </div>
 </body>
 </html>
