--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
         <h3>my third website</h3>
         <p> sjfhsjff  sufgaff  ajfgfofao   ajfgfhasfihf asjfasufhu  </p>
     </div>
+
+    <div>
+        <h3>how  to push incrimenntal</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m" add a meaningfulll commit message".</li>
+            <li>git push</li>
+
+        </ul>
+        
+    </div>
 </body>
 </html>
